arrumando as cores das telas de login e registro.

--- a/pages/register.html
+++ b/pages/register.html
@@ -10,7 +10,7 @@
   <body>
     <div class="login-container">
       <div class="login-box">
-        <img src="https://via.placeholder.com/60" alt="Logo" class="logo">
+        <img src="/static/img/logo.png" alt="Logo" class="logo">
         <h2>Entrar</h2>
         <form>
             <div class="mb-3">
