--- a/pages/register.html
+++ b/pages/register.html
@@ -11,7 +11,7 @@
     <div class="login-container">
       <div class="login-box">
         <img src="/static/img/logo.png" alt="Logo" class="logo">
-        <h2>Entrar</h2>
+        <h2>Cadastro</h2>
         <form>
             <div class="mb-3">
                 <input type="text" class="form-control" placeholder="Email" required>
@@ -22,7 +22,7 @@
           <div class="mb-3">
             <input type="password" class="form-control" placeholder="Senha" required>
           </div>
-          <button type="submit" class="btn btn-primary w-100">Entrar</button>
+          <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
         </form>
       </div>
       <footer>
