--- a/pages/register.html
+++ b/pages/register.html
@@ -13,9 +13,9 @@
         <img src="/static/img/logo.png" alt="Logo" class="logo">
         <h2>Cadastro</h2>
         <form>
-            <div class="mb-3">
-                <input type="text" class="form-control" placeholder="Email" required>
-              </div>
+          <div class="mb-3">
+            <input type="text" class="form-control" placeholder="Email" required>
+          </div>
           <div class="mb-3">
             <input type="text" class="form-control" placeholder="CPF" required>
           </div>
@@ -24,10 +24,17 @@
           </div>
           <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
         </form>
+
+        <!-- Botão de Voltar para a Página Inicial -->
+        <div class="mt-3">
+          <a href="/index.html" class="btn btn-secondary w- btn-rounded">Voltar para a Página Inicial</a>
+        </div>
       </div>
       <footer>
         <p>Todos os direitos reservados</p>
       </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
