adicionando o layout teste

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item"><a href="#" class="nav-link text-white">Notícias de Hoje</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white">Formas de Ingresso - Militares de Carreira</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white">Formas de Ingresso - Militares Temporários</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white">Militares de Carreira</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white">Militares Temporários</a></li>
             </ul>
           </div>
         </nav>
@@ -73,6 +73,14 @@
             </div>
           </div>
         </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img src="/static/img/example1.jpg" class="card-img-top" alt="Exame 4">
+            <div class="card-body">
+              <p class="card-text">Exame de admissão ao curso de formação de oficial da aeronáutica nível médio</p>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Botão de Carregar Mais -->
@@ -89,7 +97,7 @@
           <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
           </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 Company, Inc</span>
+          <span class="mb-3 mb-md-0 text-body-secondary">&copy;2006-2024 Divisão de Admissão e Seleção (DAS)</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
