--- a/pages/login.html
+++ b/pages/login.html
@@ -23,7 +23,7 @@
         </form>
       </div>
       <footer>
-        <p>Todos os direitos reservados</p>
+        <p>&copy;2006-2024 Divisão de Admissão e Seleção (DAS)</p>
       </footer>
     </div>
   </body>
