--- a/pages/register.html
+++ b/pages/register.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <footer>
-        <p>Todos os direitos reservados</p>
+        <p>&copy;2006-2024 Divisão de Admissão e Seleção (DAS)</p>
       </footer>
     </div>
 
