--- a/pages/register.html
+++ b/pages/register.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tela de Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style-login.css">
+    <link rel="stylesheet" href="../static/css/style-login.css">
   </head>
   <body>
     <div class="login-container">
       <div class="login-box">
-        <img src="/static/img/logo.png" alt="Logo" class="logo">
+        <img src="../static/img/logo.png" alt="Logo" class="logo">
         <h2>Cadastro</h2>
         <form>
           <div class="mb-3">
@@ -27,7 +27,7 @@
 
         <!-- Botão de Voltar para a Página Inicial -->
         <div class="mt-3">
-          <a href="/index.html" class="btn btn-secondary w- btn-rounded">Voltar para a Página Inicial</a>
+          <a href="../index.html" class="btn btn-secondary w- btn-rounded">Voltar para a Página Inicial</a>
         </div>
       </div>
       <footer>
