--- a/pages/EDA_2.html
+++ b/pages/EDA_2.html
@@ -22,14 +22,14 @@
     <!-- Menu lateral -->
     <aside class="sidebar">
         <ul>
-            <li>
+            <li class="active">
                 <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
                 Esquadrilha da Fumaça - EDA
             </li>
-            <li>
-                <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                        <li>
+                <a href="https://www.youtube.com/@portalfab/videos"><img src="../static/img/icon-fabtv.png" alt="FAB TV">
                 FAB TV
-            </li>
+            </li></a>
             <a href="Radio.html"><li>
                 <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
                 Rádio Força Aérea FM
