--- a/pages/Militares_carreira.html
+++ b/pages/Militares_carreira.html
@@ -26,10 +26,10 @@
                 <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
                 Esquadrilha da Fumaça - EDA
             </li></a>
-            <li>
-                <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                        <li>
+                <a href="https://www.youtube.com/@portalfab/videos"><img src="../static/img/icon-fabtv.png" alt="FAB TV">
                 FAB TV
-            </li>
+            </li></a>
             <li>
                 <a href="Radio.html"><img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
                 Rádio Força Aérea FM
