--- a/pages/Radio.html
+++ b/pages/Radio.html
@@ -27,10 +27,10 @@
                 Esquadrilha da Fumaça - EDA
             </li></a>
             <li>
-                <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                <a href="https://www.youtube.com/@portalfab/videos"><img src="../static/img/icon-fabtv.png" alt="FAB TV">
                 FAB TV
-            </li>
-            <li>
+            </li></a>
+            <li class="active">
                 <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
                 Rádio Força Aérea FM
             </li>
