--- a/pages/Força_aerea.html
+++ b/pages/Força_aerea.html
@@ -26,10 +26,10 @@
                 <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
                 Esquadrilha da Fumaça - EDA
             </li></a>
-            <li>
-                <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                        <li>
+                <a href="https://www.youtube.com/@portalfab/videos"><img src="../static/img/icon-fabtv.png" alt="FAB TV">
                 FAB TV
-            </li>
+            </li></a>
             <li>
                 <a href="Radio.html"><img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
                 Rádio Força Aérea FM
@@ -38,7 +38,7 @@
                 <img src="../static/img/icon-aerovisao.png" alt="Aerovisão">
                 Aerovisão
             </li>
-            <li>
+            <li class="active">
                 <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
                 Publicações da FAB
             </li>
