--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand text-white" href="#">
-            <img src="/static/img/logo2.png" alt="Logo" class="logo">
+            <img src="static/img/logo2.png" alt="Logo" class="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,8 +21,8 @@
           <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item"><a href="#" class="nav-link text-white">Notícias de Hoje</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white">Militares de Carreira</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white">Militares Temporários</a></li>
+              <li class="nav-item"><a href="pages/Militares_carreira.html" class="nav-link text-white">Formas de Ingresso - Militares de Carreira</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white">Formas de Ingresso - Militares Temporários</a></li>
             </ul>
           </div>
         </nav>
@@ -32,7 +32,7 @@
     <!-- Conteúdo Principal -->
     <main class="container my-4">
       <h1 class="text-center">Exames de Admissão para Militares de Carreira da Aeronáutica</h1>
-      <p class="text-center">Para realizar a inscrição em qualquer um dos Exames em andamento, que permitam inscrições online, é necessário realizar o <a href="/pages/register.html" class="text-primary">cadastro</a> mediante link disponibilizado na Área do Candidato.</p>
+      <p class="text-center">Para realizar a inscrição em qualquer um dos Exames em andamento, que permitam inscrições online, é necessário realizar o <a href="pages/register.html" class="text-primary">cadastro</a> mediante link disponibilizado na Área do Candidato.</p>
 
       <!-- Campo de Busca -->
       <div class="search-bar text-center mb-4">
@@ -43,7 +43,7 @@
       <div class="row g-3">
         <div class="col-md-6 col-lg-4">
           <div class="card">
-            <img src="/static/img/example1.jpg" class="card-img-top" alt="Exame 1">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 1">
             <div class="card-body">
               <p class="card-text">Exame de admissão ao curso de formação de sargento da aeronáutica nível médio</p>
             </div>
@@ -51,7 +51,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card">
-            <img src="/static/img/example1.jpg" class="card-img-top" alt="Exame 2">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 2">
             <div class="card-body">
               <p class="card-text">Exame de admissão ao curso de formação de sargento da aeronáutica nível fundamental</p>
             </div>
@@ -59,7 +59,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card">
-            <img src="/static/img/example1.jpg" class="card-img-top" alt="Exame 3">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 3">
             <div class="card-body">
               <p class="card-text">Exame de admissão ao curso de formação de oficial da aeronáutica nível superior</p>
             </div>
@@ -67,15 +67,7 @@
         </div>
         <div class="col-md-6 col-lg-4">
           <div class="card">
-            <img src="/static/img/example1.jpg" class="card-img-top" alt="Exame 4">
-            <div class="card-body">
-              <p class="card-text">Exame de admissão ao curso de formação de oficial da aeronáutica nível médio</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img src="/static/img/example1.jpg" class="card-img-top" alt="Exame 4">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 4">
             <div class="card-body">
               <p class="card-text">Exame de admissão ao curso de formação de oficial da aeronáutica nível médio</p>
             </div>
