--- a/pages/Força_aerea.html
+++ b/pages/Força_aerea.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Força Aérea Brasileira</title>
-    <link rel="stylesheet" href="../static/css/força.css">
+    <link rel="stylesheet" href="../static/css/forca.css">
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -22,37 +22,33 @@
     <!-- Menu lateral -->
     <aside class="sidebar">
         <ul>
-            <a href="EDA.html"><li class="text">
+            <li >
+                <a href="EDA.html">
                 <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
                 Esquadrilha da Fumaça - EDA
-            </li></a>
-                        <li>
-                <a href="https://www.youtube.com/@portalfab/videos"><img src="../static/img/icon-fabtv.png" alt="FAB TV">
-                FAB TV
-            </li></a>
+                </a>
+            </li>
             <li>
-                <a href="Radio.html"><img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
-                Rádio Força Aérea FM
-            </li></a>
+                <a href="fabtv.html">
+                    <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                    FAB TV
+                </a>
+            </li>
             <li>
-                <img src="../static/img/icon-aerovisao.png" alt="Aerovisão">
-                Aerovisão
+                <a href="Radio.html">
+                    <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
+                    Rádio Força Aérea FM
+                </a>
             </li>
             <li class="active">
-                <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
-                Publicações da FAB
+                    <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
+                    Publicações da FAB
             </li>
             <li>
-                <img src="../static/img/icon-reserva.png" alt="Reserva Interativa">
-                Reserva Interativa
-            </li>
-            <li>
-                <img src="../static/img/icon-aplicativo.png" alt="Aplicativo FAB">
-                Aplicativo FAB
-            </li>
-            <li>
-                <img src="../static/img/icon-imagens.png" alt="Imagens">
-                Imagens
+                <a href="/index.html">
+                    <img src="../static/img/icon-aplicativo.png" alt="Publicações da FAB">
+                    Home
+                </a>
             </li>
         </ul>
     </aside>
@@ -86,7 +82,7 @@
 
     <!-- Rodapé -->
     <footer class="footer">
-        <p>Todos os direitos reservados</p>
+        <p>© 2024 Ingresso EEAR. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
