--- a/pages/Militares_carreira.html
+++ b/pages/Militares_carreira.html
@@ -22,38 +22,35 @@
     <!-- Menu lateral -->
     <aside class="sidebar">
         <ul>
-            <a href="EDA.html"><li class="text">
+            <li >
+                <a href="EDA.html">
                 <img src="../static/img/icon-eda.png" alt="Esquadrilha da Fumaça">
                 Esquadrilha da Fumaça - EDA
-            </li></a>
-                        <li>
-                <a href="https://www.youtube.com/@portalfab/videos"><img src="../static/img/icon-fabtv.png" alt="FAB TV">
-                FAB TV
-            </li></a>
-            <li>
-                <a href="Radio.html"><img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
-                Rádio Força Aérea FM
-            </li></a>
-            <li>
-                <img src="../static/img/icon-aerovisao.png" alt="Aerovisão">
-                Aerovisão
-            </li>
-            <a href="Força_aerea.html"><li>
-                <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
-                Publicações da FAB
-            </li></a>
-            <li>
-                <img src="../static/img/icon-reserva.png" alt="Reserva Interativa">
-                Reserva Interativa
+                </a>
             </li>
             <li>
-                <img src="../static/img/icon-aplicativo.png" alt="Aplicativo FAB">
-                Aplicativo FAB
+                <a href="fabtv.html">
+                    <img src="../static/img/icon-fabtv.png" alt="FAB TV">
+                    FAB TV
+                </a>
             </li>
             <li>
-                <img src="../static/img/icon-imagens.png" alt="Imagens">
-                Imagens
+                <a href="Radio.html">
+                    <img src="../static/img/icon-radio.png" alt="Rádio Força Aérea FM">
+                    Rádio Força Aérea FM
+                </a>
             </li>
+            <li class="">
+                    <img src="../static/img/icon-publicacoes.png" alt="Publicações da FAB">
+                    Publicações da FAB
+            </li>
+            <li>
+                <a href="/index.html">
+                    <img src="../static/img/icon-aplicativo.png" alt="Publicações da FAB">
+                    Home
+                </a>
+            </li>
+        </ul>
         </ul>
     </aside>
 
@@ -91,7 +88,7 @@
 
     <!-- Rodapé -->
     <footer class="footer">
-        <p>Todos os direitos reservados</p>
+        <p>© 2024 Ingresso EEAR. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
