--- a/pages/login.html
+++ b/pages/login.html
@@ -23,7 +23,7 @@
         </form>
       </div>
       <footer>
-        <p>Todos os direitos reservados</p>
+        <p>© 2024 Ingresso EEAR. Todos os direitos reservados.</p>
       </footer>
     </div>
   </body>
