--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Página Inicial</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Cabeçalho -->
-    <header style="background-color: #1c3b70;" class="text-white py-3">
+    <header style="background-color: #2E6DB5;" class="text-white py-3">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <a class="navbar-brand text-white" href="#">
@@ -20,9 +21,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a href="#" class="nav-link text-white">Notícias de Hoje</a></li>
-              <li class="nav-item"><a href="pages/Militares_carreira.html" class="nav-link text-white">Formas de Ingresso - Militares de Carreira</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white">Formas de Ingresso - Militares Temporários</a></li>
+              <li class="nav-item"><a href="pages/Militares_carreira.html" class="nav-link text-white">Militares de Carreira</a></li>
             </ul>
           </div>
         </nav>
@@ -35,9 +34,36 @@
       <p class="text-center">Para realizar a inscrição em qualquer um dos Exames em andamento, que permitam inscrições online, é necessário realizar o <a href="pages/register.html" class="text-primary">cadastro</a> mediante link disponibilizado na Área do Candidato.</p>
 
       <!-- Campo de Busca -->
-      <div class="search-bar text-center mb-4">
-        <input type="text" class="form-control" placeholder="Digite seu nome ou CPF">
+      <div class="search-bar text-center mb-4 d-flex justify-content-center">
+        <input type="text" class="form-control w-50 me-2" id="cpfInput" placeholder="Digite seu CPF">
+        <button class="btn btn-primary" id="searchButton">
+          <i class="bi bi-search"></i>
+        </button>
       </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header bg-primary text-white">
+              <h5 class="modal-title" id="resultModalLabel">
+                <i class="bi bi-info-circle"></i> Resultado da Busca
+              </h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Fechar"></button>
+            </div>
+            <div class="modal-body text-center">
+              <div id="modalMessage" class="fs-5 text-muted">
+                <!-- Mensagem personalizada aqui -->
+                <i class="bi bi-emoji-frown fs-1 text-danger"></i>
+                <p>CPF não encontrado.</p>
+              </div>
+            </div>
+            <div class="modal-footer justify-content-center">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+            </div>
+          </div>
+        </div>
+      </div>      
 
       <!-- Cards de Exames -->
       <div class="row g-3">
@@ -65,41 +91,74 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
-          <div class="card">
-            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 4">
-            <div class="card-body">
-              <p class="card-text">Exame de admissão ao curso de formação de oficial da aeronáutica nível médio</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Botão de Carregar Mais -->
-      <div class="text-center mt-4">
-        <button class="btn btn-outline-primary">Carregar mais <span>&#9660;</span></button>
       </div>
     </main>
 
-    <div class="b-example-divider"></div>
+    <!-- Fale Conosco -->
+    <section id="contato" class="py-5">
+      <div class="container">
+        <h2 class="text-center mb-4">Fale Conosco</h2>
+        <form>
+          <div class="mb-3">
+            <label for="name" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="name" placeholder="Seu nome">
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input type="email" class="form-control" id="email" placeholder="Seu e-mail">
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Mensagem</label>
+            <textarea class="form-control" id="message" rows="3" placeholder="Escreva sua mensagem"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+      </div>
+    </section>
 
-    <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-          </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">&copy;2006-2024 Divisão de Admissão e Seleção (DAS)</span>
-        </div>
-    
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
-        </ul>
-      </footer>
-    </div>
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-3 text-center">
+      <p class="mb-0">© 2024 Ingresso EEAR. Todos os direitos reservados.</p>
+    </footer>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // Validação de CPF
+      function validarCPF(cpf) {
+        cpf = cpf.replace(/[^\d]+/g, '');
+        if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) return false;
+        let soma = 0, resto;
+        for (let i = 1; i <= 9; i++) soma += parseInt(cpf.substring(i - 1, i)) * (11 - i);
+        resto = (soma * 10) % 11;
+        if (resto === 10 || resto === 11) resto = 0;
+        if (resto !== parseInt(cpf.substring(9, 10))) return false;
+        soma = 0;
+        for (let i = 1; i <= 10; i++) soma += parseInt(cpf.substring(i - 1, i)) * (12 - i);
+        resto = (soma * 10) % 11;
+        if (resto === 10 || resto === 11) resto = 0;
+        return resto === parseInt(cpf.substring(10, 11));
+      }
+
+      // Ação do botão de busca
+      document.getElementById('searchButton').addEventListener('click', function () {
+  const cpf = document.getElementById('cpfInput').value;
+  const modalMessage = document.getElementById('modalMessage');
+  if (validarCPF(cpf)) {
+    modalMessage.innerHTML = `
+      <i class="bi bi-check-circle fs-1 text-success"></i>
+      <p>CPF válido! Registro encontrado.</p>
+    `;
+  } else {
+    modalMessage.innerHTML = `
+      <i class="bi bi-emoji-frown fs-1 text-danger"></i>
+      <p>CPF inválido ou não encontrado.</p>
+    `;
+  }
+  const modal = new bootstrap.Modal(document.getElementById('resultModal'));
+  modal.show();
+});
+
+    </script>
   </body>
 </html>
