--- a/pages/register.html
+++ b/pages/register.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <footer>
-        <p>Todos os direitos reservados</p>
+        <p>© 2024 Ingresso EEAR. Todos os direitos reservados.</p>
       </footer>
     </div>
 
