--- a/pages/Radio.html
+++ b/pages/Radio.html
@@ -61,7 +61,7 @@
             <div class="banner">
                 <img src="../static/img/banner-radio.png" alt="Rádio Força Aérea">
             </div>
-            <div class="programacao">
+            <div class="programacao content-text">
                 <h2>PROGRAMAÇÃO</h2>
                 <div class="programa">
                     <img src="../static/img/programa1.png" alt="14 BIS">
