--- a/index.html
+++ b/index.html
@@ -92,6 +92,32 @@
           </div>
         </div>
       </div>
+      <div class="row g-3">
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 1">
+            <div class="card-body">
+              <p class="card-text">Exame de admissão ao curso de formação de sargento da aeronáutica nível médio</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 2">
+            <div class="card-body">
+              <p class="card-text">Exame de admissão ao curso de formação de sargento da aeronáutica nível fundamental</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <div class="card">
+            <img src="static/img/example1.jpg" class="card-img-top" alt="Exame 3">
+            <div class="card-body">
+              <p class="card-text">Exame de admissão ao curso de formação de oficial da aeronáutica nível superior</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Fale Conosco -->
